<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_add_category">

    <fragment
        android:id="@+id/nav_add_category"
        android:name="com.mvvm.contactlist.fragments.AddCategoryFragment"
        android:label="@string/menu_add_category"
        tools:layout="@layout/fragment_add_category" />

    <fragment
        android:id="@+id/nav_add_contact"
        android:name="com.mvvm.contactlist.fragments.AddContactFragment"
        android:label="@string/menu_add_contact"
        tools:layout="@layout/fragment_add_contact" />

    <fragment
        android:id="@+id/nav_contact_list"
        android:name="com.mvvm.contactlist.fragments.ContactListFragment"
        android:label="@string/menu_contact_list"
        tools:layout="@layout/fragment_contact_list" />

</navigation>